Feature / Java 17 support (#95)
* Let Gradle tests work with JDK 17 (explicit open of packages needed for native memory access)

* Add JVM args to Gradle applications for native memory access

* Make data service check native memory access on start up (do not wait until first API call)

* Add run configurations for all services and DB deploy, including JVM args for native memory access

* Add run configurations for unit tests, including JVM args for native memory access

* Fix temporal search unit tests on Windows

* Fix README formatting

* Run java version matrix in CI, test against LTS versions 11 and 17

* Update readme notes on supported Java versions

* Bump H2 version for compliance